# OpenMP

./: CMakeLists.txt  README.md
hw/: hello_world.cpp  multi_matrix_parallel.cpp  multi_vector_block_transpose.cpp  multi_vector_parallel.cpp  multi_vector_simd.cpp  multi_vector_simd2.cpp  multi_vector_simd_block.cpp  multi_vector_simd_fma.cpp  multi_vector_simd_unroll.cpp  multi_vector_strassen.cpp  multi_vector_transpose.cpp  test_for.cpp
mpi/: test_mpi.cpp  vector_matrix_mul.cpp
